Added zoom capability with HammerJS

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Jquery -->
+<!-- External Libs -->
 <script src="js/libs/jquery1_11.min.js" type="application/javascript"></script>
-<!-- Load the Paper.js library -->
 <script src="js/libs/paper.js" type="text/javascript" ></script>
+<script src="js/libs/hammer.js" type="application/javascript"></script>
 <!--Load own libraries -->
 <script src="js/PaperFunctions.js" type="application/javascript"></script>
+<script src="js/HammerFunctions.js" type="application/javascript"></script>
 <script src="js/app.js" type="application/javascript"></script>
 <!-- Define inlined JavaScript -->
 <script type="text/javascript">
