Added a feature to add images to the canvas

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <!--Load own libraries -->
 <script src="js/PaperFunctions.js" type="application/javascript"></script>
 <script src="js/HammerFunctions.js" type="application/javascript"></script>
+<script src="js/FileLoad.js" type="application/javascript"></script>
 <script src="js/app.js" type="application/javascript"></script>
 <!-- Define inlined JavaScript -->
 <script type="text/javascript">
@@ -17,7 +18,8 @@
 </script>
 </head>
 <body>
-    The button controls will come here
+    <input type="file" id="loadfile"><output id="file"></output>
     <canvas id=myCanvas></canvas>
+    <div id="test"></div>
 </body>
 </html>
