Updates to the Readme

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 </script>
 </head>
-<body>
+<body
+    <p> This project is build only to test functionality implementing a drawing editor with PaperJS and HammerJS (Go on...try it on mobile!). On mobile, the canvas has pan and zoom capabilities.</p>
+    <p> Any comments or suggestions, or just a shoutout to say thanks, reach me on twitter @tman_tech. <a href="https://github.com/TmanTman/DrawToolPaperJS">Fork this project</a> on Github!</p>
     <input type="file" id="loadfile"><output id="file"></output>
     <canvas id=myCanvas></canvas>
     <div id="test"></div>
